# goaldy

./: .gitignore  README.md  ROADMAP.md  justfile  package-lock.json  package.json  storage.md  sync-mechanism.md
.github/workflows/: claude-agent.yml
mcp-servers/autoship-mcp/: package.json
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppHeader.tsx  BottomNav.tsx  BudgetSetup.tsx  CategorySelector.tsx  ExpenseList.tsx  FeedbackButton.tsx  FeedbackList.tsx  FeedbackModal.tsx  HomeScreen.tsx  Numpad.tsx  OfflineBanner.tsx  PermissionPrompt.tsx  SyncIndicator.tsx  UserAvatar.tsx
src/contexts/: AuthContext.tsx  DebugContext.tsx  RepositoryContext.tsx  SyncContext.tsx
src/hooks/: index.ts  useAndroidBack.ts  useBackNavigation.ts  useBudgets.ts  useCategories.ts  useExpenses.ts  useHabitGoals.ts  usePlatform.ts  useSavingsGoals.ts  useSwipeBack.ts
src/lib/: auth.ts  browser-database.ts  cron.ts  database.ts  fcm.ts  migrations.ts  notification-scheduler.ts  notifications.ts  platform.ts  push-token-service.ts  supabase-config.ts  supabase.ts  sync.ts  types.ts
src/routes/: RootLayout.tsx  feedback.tsx  home.tsx  settings.tsx  setup.tsx
src/sync/: types.ts
supabase/: config.toml
supabase/migrations/: 00001_initial_schema.sql  00002_push_tokens.sql  20260116225318_initial_schema.sql  20260118180152_add_savings_tables.sql  20260120000000_add_notification_tables.sql  20260121000000_add_habit_goals_tables.sql
(+56 files in other folders)
