[package]
name = "goaldy"
version = "0.1.0"
description = "Personal budgeting and savings motivation app"
authors = ["you"]
edition = "2021"

[lib]
name = "goaldy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
